# jfin2etv

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  Gemfile  PUBLISHING.md  PUBLISHING_ETV.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/scripting/: 00-ruby-primer.md  01-channel.md  02-collections.md  03-fillers.md  04-layouts.md  05-schedule.md  06-query-grammar.md  07-helpers-and-durations.md  08-errors-and-validation.md  09-cookbook.md  README.md
examples/config/: jfin2etv.yml
examples/scripts/01/: main.rb
examples/scripts/02/: main.rb
examples/scripts/03/: main.rb
lib/: jfin2etv.rb
lib/jfin2etv/: dsl.rb  duration.rb  errors.rb  helpers.rb  plan.rb  runner.rb  selector.rb  serializer.rb  validation.rb
spec/: dsl_spec.rb  runner_spec.rb  serializer_spec.rb  spec_helper.rb
src/jfin2etv/: __init__.py  __main__.py  cli.py  config.py  daemon.py  logging.py  orchestrator.py  ruby_bridge.py  schemas.py  server.py  state.py  time_utils.py
src/jfin2etv/jellyfin/: __init__.py  client.py  query.py  resolver.py
src/jfin2etv/output/: __init__.py  channel_config.py  lineup.py  playout.py  xmltv.py
stacks/ersatztv-next/: ghcr.yml
stacks/jellyfin/: compose.yml
stacks/jfin2etv/: compose.yml
tests/: conftest.py  fake_jellyfin.py
tests/e2e/: README.md  conftest.py  docker-compose.yml  test_e2e.py
tests/unit/: test_cli.py  test_config.py  test_jellyfin_client.py  test_jellyfin_query.py  test_jellyfin_resolver.py  test_logging.py  test_orchestrator_discovery.py  test_output.py  test_planner.py  test_ruby_bridge.py  test_server.py  test_state.py  test_time_utils.py
(+8 files in other folders)
