[project]
name = "jfin2etv"
version = "0.1.0"
description = "Scheduler and playout-compiler bridging Jellyfin and ErsatzTV-Next."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jfin2etv contributors" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "click>=8.1",
    "apscheduler>=3.10",
    "watchfiles>=0.22",
    "aiohttp>=3.9",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "lxml>=5.2",
    "python-dateutil>=2.9",
    "tzdata>=2024.1",
]

[project.scripts]
jfin2etv = "jfin2etv.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
    "types-jsonschema>=4.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jfin2etv"]

[tool.hatch.build.targets.sdist]
include = ["src/jfin2etv", "lib/jfin2etv.rb", "lib/jfin2etv", "vendor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not slow'"
markers = [
    "slow: end-to-end tests that spin up real containers",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["jfin2etv"]
mypy_path = "src"
